--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -7,3 +7,7 @@ body{
     font-weight: 400;
     @apply bg-gradient-to-b from-[#222222] to-[#342022] min-h-screen text-white;
 }
+
+.input-clase {
+@apply w-full border border-neutral-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-[#AE0F28];
+}
